fix: input doesn't overlapp clear button, long serach text is hidden

--- a/src/components/RightMenu/RightMenu.module.scss
+++ b/src/components/RightMenu/RightMenu.module.scss
@@ -9,7 +9,7 @@
   width: 100vw;
   min-height: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 3;
   visibility: hidden;
   opacity: 0;
   transition: opacity 0.1s ease-in-out, visibility 0.1s ease-in-out;
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  z-index: 2;
+  z-index: 4;
   width: $base*77;
   height: 100vh;
   right: 0px;
