--- a/src/index.scss
+++ b/src/index.scss
@@ -57,6 +57,7 @@ body {
 .alignCenter {
   align-self: center;
 }
+
 //CONTENT WITH CARDS:
 .content {
   h1 {
@@ -81,11 +82,13 @@ body {
   border-radius: 10px;
   padding: 2*$base 3*$base;
   position: relative;
+
   .deleteSearch {
     position: absolute;
     right: 10px;
     width: 20px;
-    z-index: 0;
+    z-index: 2;
+
     &:hover {
       opacity: 1;
       transition: 0.2s;
@@ -96,6 +99,16 @@ body {
 
 input {
   all: unset;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 200px;
 }
 
+.titleSearch {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 600px;
+}
 
